# p8k8

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  remapp  site
.githooks/: pre-commit  pre-push
.schema/: analyzer.yaml  dreaming-agent.yaml  general.yaml  sample-agent.yaml
data/case_study/: demand.csv  inventory.csv  orders.csv  products.csv
data/ontology/: mermaid-syntax-reference.md
data/platoon_test/: demand.csv  products.csv
docker/: Dockerfile.pg18
docs/: agentic.md  commerce-analytics.md  dreaming.md  moments.md  percolate.md  port-conventions.md  reading.md  rem.md  security.md  services.md
docs/ontology/: README.md
docs/ontology/percolate/: Readme.md
docs/ontology/rem-queries/: embedding-service.md  fuzzy.md  kv-store.md  lookup.md  overview.md  (+2 more)
examples/: capture_agent_run.py
examples/data/: agent_run.yaml
manifests/: README.md  cluster-config.yaml  troubleshooting.md
manifests/scripts/: init-openbao.sh  seed-openbao.sh  sync-secrets.sh
p8/: __init__.py  settings.py
p8/agentic/: README.md  __init__.py  adapter.py  agent_schema.py  core_agents.py  delegate.py  routing.py  streaming.py  types.py
p8/api/: README.md  deps.py  main.py  mcp_server.py  security.py
p8/ontology/: __init__.py  base.py  types.py  verify.py
p8/services/: auth.py  bootstrap.py  content.py  email.py  embeddings.py  encryption.py  files.py  graph.py  kms.py  memory.py  notifications.py  queue.py  reports.py  repository.py  slack.py  stripe.py  usage.py  vision.py  web_search.py
p8/utils/: __init__.py  data.py  ids.py  links.py  parsing.py  tokens.py
p8/workers/: __init__.py  __main__.py  processor.py
scripts/: check-env.sh  simulate_dreaming.py  sync-secrets-openbao.sh
sql/: 01_install_entities.sql  02_install.sql  03_qms.sql  04_payments.sql  install.sql  install_entities.sql  payments.sql  qms.sql
sql/migrations/: 001_sync_remote.sql
tests/: README.md  conftest.py  test_auth_flows.py  test_chat.py  test_content.py  test_memory.py  test_moments_feed.py  test_news_handler.py  test_query_engine.py  test_repository.py  test_verify.py
tests/.sim/: encryption_demo.py  qms_demo.py  qms_monitor.sh
tests/agents/: test_agent_tools.py  test_chat.py  test_remind_me.py
tests/api/: test_api.py  test_cli.py
tests/content/: test_content.py  test_embeddings.py
tests/data/: conversations.json  seed-feed.json  seed-messages.json  seed-reading-resources.yaml  seed-reading.yaml  seed-session.json  seed-test-user.sql
tests/database/: test_database.py
tests/dreaming/: fixtures.py  test_dreaming.py  test_dreaming_e2e.py  test_merge_graph_edges.py  test_save_moments.py
tests/evalaution/: Readme.md
tests/integration/: conftest.py
tests/memory/: test_memory.py  test_memory_pipeline.py  test_moments.py
tests/ontology/: test_verify.py
tests/security/: test_vault.py
tests/unit/: helpers.py  test_auth_codes.py  test_cli.py  test_mcp_oauth_flow.py  test_security.py  test_stripe_webhooks.py  test_verify.py
tmp/: dreaming.yaml
(+189 files in other folders)
